--- a/index.html
+++ b/index.html
@@ -3,315 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Global Renewable Energy Adoption: A Narrative Visualization</title>
+    <title>S&P 500 and the 2008 Financial Crisis: A Narrative Visualization</title>
+    <!-- D3.js -->
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <!-- d3-annotation -->
+    <script src="https://unpkg.com/d3-svg-annotation@2.5.1/d3-annotation.min.js"></script>
     <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: #333;
-            min-height: 100vh;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            background: white;
-            border-radius: 15px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-            overflow: hidden;
-        }
-
-        .header {
-            background: linear-gradient(135deg, #2c3e50 0%, #3498db 100%);
-            color: white;
-            padding: 30px;
-            text-align: center;
-        }
-
-        .header h1 {
-            margin: 0;
-            font-size: 2.5em;
-            font-weight: 300;
-        }
-
-        .header p {
-            margin: 10px 0 0 0;
-            font-size: 1.2em;
-            opacity: 0.9;
-        }
-
-        .navigation {
-            background: #34495e;
-            padding: 15px 30px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .nav-buttons {
-            display: flex;
-            gap: 10px;
-        }
-
-        .nav-btn {
-            background: #3498db;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 25px;
-            cursor: pointer;
-            font-size: 14px;
-            transition: all 0.3s ease;
-        }
-
-        .nav-btn:hover {
-            background: #2980b9;
-            transform: translateY(-2px);
-        }
-
-        .nav-btn:disabled {
-            background: #bdc3c7;
-            cursor: not-allowed;
-            transform: none;
-        }
-
-        .scene-indicator {
-            color: white;
-            font-size: 16px;
-            font-weight: 500;
-        }
-
-        .content {
-            padding: 40px;
-            min-height: 600px;
-        }
-
-        .scene {
-            display: none;
-        }
-
-        .scene.active {
-            display: block;
-        }
-
-        .chart-container {
-            width: 100%;
-            height: 500px;
-            margin: 20px 0;
-            border: 2px solid #ecf0f1;
-            border-radius: 10px;
-            background: #f8f9fa;
-        }
-
-        .annotation {
-            position: absolute;
-            background: rgba(52, 152, 219, 0.9);
-            color: white;
-            padding: 10px 15px;
-            border-radius: 8px;
-            font-size: 14px;
-            max-width: 200px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-            pointer-events: none;
-            z-index: 1000;
-        }
-
-        .annotation::after {
-            content: '';
-            position: absolute;
-            bottom: -8px;
-            left: 20px;
-            width: 0;
-            height: 0;
-            border-left: 8px solid transparent;
-            border-right: 8px solid transparent;
-            border-top: 8px solid rgba(52, 152, 219, 0.9);
-        }
-
-        .scene-title {
-            font-size: 2em;
-            color: #2c3e50;
-            margin-bottom: 20px;
-            text-align: center;
-        }
-
-        .scene-description {
-            font-size: 1.1em;
-            line-height: 1.6;
-            color: #555;
-            margin-bottom: 30px;
-            text-align: center;
-        }
-
-        .tooltip {
-            position: absolute;
-            background: rgba(0, 0, 0, 0.8);
-            color: white;
-            padding: 10px;
-            border-radius: 5px;
-            font-size: 12px;
-            pointer-events: none;
-            z-index: 1000;
-        }
-
-        .legend {
-            margin-top: 20px;
-            text-align: center;
-        }
-
-        .legend-item {
-            display: inline-block;
-            margin: 0 15px;
-            font-size: 14px;
-        }
-
-        .legend-color {
-            display: inline-block;
-            width: 20px;
-            height: 20px;
-            margin-right: 5px;
-            border-radius: 3px;
-        }
-
-        .interaction-hint {
-            background: #e8f4fd;
-            border-left: 4px solid #3498db;
-            padding: 15px;
-            margin: 20px 0;
-            border-radius: 5px;
-            font-style: italic;
-        }
+        body { font-family: Arial, sans-serif; background: #c774e7; margin: 0; padding: 0; }
+        .container { max-width: 900px; margin: 40px auto; background: #fff; padding: 32px 32px 24px 32px; border-radius: 12px; box-shadow: 0 2px 12px rgba(0,0,0,0.08); }
+        h1 { text-align: center; margin-bottom: 8px; }
+        #scene-description { font-size: 1.15em; margin-bottom: 18px; text-align: center; }
+        #chart { display: flex; justify-content: center; align-items: center; }
+        #chart svg { background: #f4f7fa; border-radius: 8px; }
+        #scene-controls { display: flex; justify-content: center; gap: 16px; margin: 18px 0 8px 0; }
+        #scene-controls button { padding: 8px 22px; font-size: 1em; border-radius: 6px; border: none; background: #1976d2; color: #fff; cursor: pointer; transition: background 0.2s; }
+        #scene-controls button:disabled { background: #b0b0b0; cursor: not-allowed; }
+        #tooltip-instructions { text-align: center; font-size: 1em; color: #444; margin-top: 8px; }
+        .d3-tooltip { position: absolute; pointer-events: none; background: #fff; border: 1px solid #1976d2; border-radius: 6px; padding: 7px 13px; font-size: 1em; color: #222; box-shadow: 0 2px 8px rgba(25,118,210,0.08); z-index: 10; }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            <h1>Global Renewable Energy Adoption</h1>
-            <p>A Journey Through Clean Energy Transformation</p>
+        <h1>How the 2008 Financial Crisis Affected the S&amp;P 500</h1>
+        <div id="scene-description"></div>
+        <div id="chart"></div>
+        <div id="scene-controls">
+            <button id="prev-btn">Previous</button>
+            <button id="next-btn">Next</button>
         </div>
-
-        <div class="navigation">
-            <div class="nav-buttons">
-                <button class="nav-btn" id="prevBtn" onclick="previousScene()">← Previous</button>
-                <button class="nav-btn" id="nextBtn" onclick="nextScene()">Next →</button>
-            </div>
-            <div class="scene-indicator">
-                Scene <span id="currentScene">1</span> of <span id="totalScenes">4</span>
-            </div>
-        </div>
-
-        <div class="content">
-            <!-- Scene 1: Global Overview -->
-            <div class="scene active" id="scene1">
-                <h2 class="scene-title">Global Renewable Energy Overview</h2>
-                <p class="scene-description">
-                    The world is transitioning towards renewable energy sources. Let's explore the current state 
-                    of renewable energy adoption across different regions and energy types.
-                </p>
-                <div class="interaction-hint">
-                    💡 Hover over the bars to see detailed information about each region's renewable energy capacity.
-                </div>
-                <div class="chart-container" id="chart1"></div>
-                <div class="legend">
-                    <div class="legend-item">
-                        <span class="legend-color" style="background: #3498db;"></span>
-                        Solar Energy
-                    </div>
-                    <div class="legend-item">
-                        <span class="legend-color" style="background: #2ecc71;"></span>
-                        Wind Energy
-                    </div>
-                    <div class="legend-item">
-                        <span class="legend-color" style="background: #f39c12;"></span>
-                        Hydroelectric
-                    </div>
-                </div>
-            </div>
-
-            <!-- Scene 2: Growth Trends -->
-            <div class="scene" id="scene2">
-                <h2 class="scene-title">Growth Trends Over Time</h2>
-                <p class="scene-description">
-                    Renewable energy capacity has been growing rapidly worldwide. This chart shows the 
-                    exponential growth in solar and wind energy installations over the past decade.
-                </p>
-                <div class="interaction-hint">
-                    💡 Click on different years to see the growth patterns and hover for specific values.
-                </div>
-                <div class="chart-container" id="chart2"></div>
-                <div class="legend">
-                    <div class="legend-item">
-                        <span class="legend-color" style="background: #e74c3c;"></span>
-                        Solar Growth
-                    </div>
-                    <div class="legend-item">
-                        <span class="legend-color" style="background: #9b59b6;"></span>
-                        Wind Growth
-                    </div>
-                </div>
-            </div>
-
-            <!-- Scene 3: Regional Comparison -->
-            <div class="scene" id="scene3">
-                <h2 class="scene-title">Regional Energy Mix Comparison</h2>
-                <p class="scene-description">
-                    Different regions have adopted renewable energy at varying rates. This visualization 
-                    compares the energy mix across major global regions.
-                </p>
-                <div class="interaction-hint">
-                    💡 Click on different regions to explore their specific energy composition and policies.
-                </div>
-                <div class="chart-container" id="chart3"></div>
-                <div class="legend">
-                    <div class="legend-item">
-                        <span class="legend-color" style="background: #1abc9c;"></span>
-                        Renewable
-                    </div>
-                    <div class="legend-item">
-                        <span class="legend-color" style="background: #e67e22;"></span>
-                        Fossil Fuels
-                    </div>
-                    <div class="legend-item">
-                        <span class="legend-color" style="background: #95a5a6;"></span>
-                        Nuclear
-                    </div>
-                </div>
-            </div>
-
-            <!-- Scene 4: Future Projections -->
-            <div class="scene" id="scene4">
-                <h2 class="scene-title">Future Projections and Opportunities</h2>
-                <p class="scene-description">
-                    The future of renewable energy looks promising. These projections show the potential 
-                    for continued growth and the opportunities for further adoption.
-                </p>
-                <div class="interaction-hint">
-                    💡 Explore different scenarios by clicking on the projection lines to see detailed forecasts.
-                </div>
-                <div class="chart-container" id="chart4"></div>
-                <div class="legend">
-                    <div class="legend-item">
-                        <span class="legend-color" style="background: #27ae60;"></span>
-                        Optimistic Scenario
-                    </div>
-                    <div class="legend-item">
-                        <span class="legend-color" style="background: #f1c40f;"></span>
-                        Moderate Scenario
-                    </div>
-                    <div class="legend-item">
-                        <span class="legend-color" style="background: #e74c3c;"></span>
-                        Conservative Scenario
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div id="tooltip-instructions">Hover over any data point to see its date and price.</div>
     </div>
-
-    <!-- D3.js Library -->
-    <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="https://d3js.org/d3-annotation.v2.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html> 
